--- a/Vine_Review_Analysis.ipynb
+++ b/Vine_Review_Analysis.ipynb
@@ -22,25 +22,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EcpUs1ypu9o2",
-        "outputId": "cbea89f6-9bc3-4f7e-9b04-ed661c5e4743"
+        "outputId": "e57f29a2-b36a-4038-c9ec-2aafdacf3086"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\r0% [Working]\r            \rHit:1 http://security.ubuntu.com/ubuntu bionic-security InRelease\n",
-            "Hit:2 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
-            "Hit:3 http://archive.ubuntu.com/ubuntu bionic-updates InRelease\n",
-            "Hit:4 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease\n",
-            "Hit:5 http://archive.ubuntu.com/ubuntu bionic-backports InRelease\n",
-            "Ign:6 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
+            "Get:1 https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/ InRelease [3,626 B]\n",
+            "Ign:2 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  InRelease\n",
+            "Get:3 http://security.ubuntu.com/ubuntu bionic-security InRelease [88.7 kB]\n",
+            "Hit:4 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
+            "Hit:5 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
+            "Hit:6 http://archive.ubuntu.com/ubuntu bionic InRelease\n",
             "Hit:7 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu bionic InRelease\n",
-            "Hit:8 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64  InRelease\n",
-            "Hit:9 https://developer.download.nvidia.com/compute/machine-learning/repos/ubuntu1804/x86_64  Release\n",
-            "Hit:10 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
-            "Hit:11 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease\n",
+            "Get:8 http://archive.ubuntu.com/ubuntu bionic-updates InRelease [88.7 kB]\n",
+            "Hit:9 http://ppa.launchpad.net/cran/libgit2/ubuntu bionic InRelease\n",
+            "Hit:10 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu bionic InRelease\n",
+            "Get:11 http://archive.ubuntu.com/ubuntu bionic-backports InRelease [83.3 kB]\n",
             "Hit:12 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu bionic InRelease\n",
+            "Fetched 264 kB in 4s (61.9 kB/s)\n",
             "Reading package lists... Done\n"
           ]
         }
@@ -96,7 +97,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "By9yI6PvvUsw",
-        "outputId": "132e0d04-7799-486e-f208-462a377aa57c"
+        "outputId": "48f8deca-2f92-4a07-f1fb-96b206255f00"
       },
       "execution_count": 3,
       "outputs": [
@@ -147,7 +148,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tqaO7bJcvhRH",
-        "outputId": "909f38b4-a9cb-4fd7-917f-7696f73725d9"
+        "outputId": "938bf8c9-5a23-470f-fd70-40b3cdc9bc5e"
       },
       "execution_count": 4,
       "outputs": [
@@ -198,7 +199,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RFjRtSIAvi4n",
-        "outputId": "2d7ca7c4-17c8-434b-b538-6b6f7bba79e4"
+        "outputId": "579155b9-9896-4407-a18b-50c979889ba8"
       },
       "execution_count": 5,
       "outputs": [
@@ -230,7 +231,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J-MyPJnavpZ2",
-        "outputId": "565e049d-f895-4fb7-e0c0-4d46c7eee425"
+        "outputId": "fda7ea0d-6a60-4042-efad-edc85d86c203"
       },
       "execution_count": 6,
       "outputs": [
@@ -259,7 +260,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gKjx0u4eyK8E",
-        "outputId": "58712c77-51e3-4b27-fded-df6cc4acef49"
+        "outputId": "87d66a1e-7998-4c10-c43e-3aeadcca2cab"
       },
       "execution_count": 7,
       "outputs": [
@@ -288,7 +289,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DPf5t-5ZyMY6",
-        "outputId": "26269e70-f57d-414a-9567-85a91d848e2b"
+        "outputId": "a077db37-92e7-46b0-ffe0-dfbbd26ff6d7"
       },
       "execution_count": 8,
       "outputs": [
@@ -317,7 +318,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PjsftV87zCBA",
-        "outputId": "62f044e7-2842-4a9f-e3c3-09e37d613ff5"
+        "outputId": "0d2c2333-169b-41f0-dfe6-b433aff4930e"
       },
       "execution_count": 9,
       "outputs": [
@@ -344,7 +345,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5afoqHYxxOVy",
-        "outputId": "9cdbd299-8b52-4cc2-fd11-34a3765d0e1d"
+        "outputId": "d140d19d-e18f-4ce4-bd82-2b385172d241"
       },
       "execution_count": 10,
       "outputs": [
@@ -371,7 +372,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UuaiYqQ_zdnK",
-        "outputId": "743748ea-b39e-409c-b4dc-64fc8e482a59"
+        "outputId": "618a2b62-208c-4781-c622-c3e9bbdbda18"
       },
       "execution_count": 11,
       "outputs": [
@@ -398,7 +399,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y_d-h833zpQ0",
-        "outputId": "af84c9fb-bbe7-4d07-e175-1ae5c91e8bae"
+        "outputId": "db75e2ec-f26c-4cba-dd15-79e1031fc9e3"
       },
       "execution_count": 12,
       "outputs": [
@@ -417,16 +418,38 @@
     {
       "cell_type": "code",
       "source": [
-        "total_5_star_paid = paid_vine_df.filter('star_rating < 5').count()\n",
+        "total_5_star_paid = paid_vine_df.filter('star_rating == 5').count()\n",
+        "print(f'1. Percent of vine 5 star reviews: {total_5_star_paid}')\n",
+        "\n",
         "total_5_star_unpaid = unpaid_vine_df.filter('star_rating == 5').count()\n",
+        "print(f'2. Percent of non_vine 5 star reviews: {total_5_star_unpaid}')\n",
+        "\n",
         "total_below5_paid = paid_vine_df.filter('star_rating < 5').count()\n",
-        "total_below5_unpaid = unpaid_vine_df.filter('star_rating < 5').count()"
+        "print(f'3. Percent of vine below 5 star reviews: {total_below5_paid}')\n",
+        "\n",
+        "total_below5_unpaid = unpaid_vine_df.filter('star_rating < 5').count()\n",
+        "print(f'4. Percent of nonvine below 5 star reviews: {total_below5_unpaid}')"
       ],
       "metadata": {
-        "id": "tEjnrN0Mz1lA"
+        "id": "tEjnrN0Mz1lA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a960dfef-dd32-41ea-bec7-1c68f47e5f8c"
       },
-      "execution_count": 14,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1. Percent of vine 5 star reviews: 509\n",
+            "2. Percent of non_vine 5 star reviews: 45858\n",
+            "3. Percent of vine below 5 star reviews: 698\n",
+            "4. Percent of nonvine below 5 star reviews: 51981\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -459,9 +482,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "geA6YTN903XY",
-        "outputId": "90880952-0a2d-432e-afee-871ae65633d8"
+        "outputId": "e8f588f0-aba0-4833-939e-8912681a4960"
       },
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,7 +492,7 @@
           "text": [
             "1. Percent of total 1 star: 22.78%\n",
             "2. Percent of total 5 star: 46.81%\n",
-            "3. Percent of Vine reviews that were 5 star: 57.83%\n",
+            "3. Percent of Vine reviews that were 5 star: 42.17%\n",
             "4. Percent of non-Vine reviews that were 5 star: 46.87%\n",
             "5. Percent of Vine reviews that below 5 star: 57.83%\n",
             "6. Percent of non-Vine reviews that below 5 star: 53.13%\n"
@@ -483,7 +506,7 @@
       "metadata": {
         "id": "q_lXX8ZdzroV"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     }
   ]
