--- a/Amazon_Reviews_ETL.ipynb
+++ b/Amazon_Reviews_ETL.ipynb
@@ -473,7 +473,7 @@
         "\n",
         "\n",
         "mode = \"append\"\n",
-        "jdbc_url=\"jdbc:postgresql://dataviz.cssmblf2ngiv.us-east-1.rds.amazonaws.com:5433/AWS\"\n",
+        "jdbc_url=\"jdbc:postgresql://dataviz.cssmblf2ngiv.us-east-1.rds.amazonaws.com:5432/AWS\"\n",
         "config = {\"user\":\"postgres\", \n",
         "          \"password\": password, \n",
         "          \"driver\":\"org.postgresql.Driver\"}"
@@ -488,7 +488,7 @@
       "outputs": [],
       "source": [
         "# Write review_id_df to table in RDS\n",
-        "review_id_df.write.jdbc(url=jdbc_url, table='review_id_table', mode=mode, properties=config)"
+        "review_id_table.write.jdbc(url=jdbc_url, table='review_id_table', mode=mode, properties=config)"
       ]
     },
     {
@@ -501,7 +501,7 @@
       "source": [
         "# Write products_df to table in RDS\n",
         "# about 3 min\n",
-        "products_df.write.jdbc(url=jdbc_url, table='products_table', mode=mode, properties=config)"
+        "products_table.write.jdbc(url=jdbc_url, table='products_table', mode=mode, properties=config)"
       ]
     },
     {
@@ -512,7 +512,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write customers_df to table in RDS\n",
+        "# Write customers_table to table in RDS\n",
         "# 5 min 14 s\n",
         "customers_df.write.jdbc(url=jdbc_url, table='customers_table', mode=mode, properties=config)"
       ]
