--- a/Amazon_Reviews_ETL.ipynb
+++ b/Amazon_Reviews_ETL.ipynb
@@ -514,7 +514,7 @@
       "source": [
         "# Write customers_table to table in RDS\n",
         "# 5 min 14 s\n",
-        "customers_df.write.jdbc(url=jdbc_url, table='customers_table', mode=mode, properties=config)"
+        "customers_table.write.jdbc(url=jdbc_url, table='customers_table', mode=mode, properties=config)"
       ]
     },
     {
@@ -525,7 +525,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write vine_df to table in RDS\n",
+        "# Write vine_table to table in RDS\n",
         "# 11 minutes\n",
         "vine_df.write.jdbc(url=jdbc_url, table='vine_table', mode=mode, properties=config)"
       ]
