--- a/Amazon_Reviews_ETL.ipynb
+++ b/Amazon_Reviews_ETL.ipynb
@@ -487,7 +487,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write review_id_df to table in RDS\n",
+        "# Write review_id_table to table in RDS\n",
         "review_id_table.write.jdbc(url=jdbc_url, table='review_id_table', mode=mode, properties=config)"
       ]
     },
@@ -499,7 +499,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write products_df to table in RDS\n",
+        "# Write products_table to table in RDS\n",
         "# about 3 min\n",
         "products_table.write.jdbc(url=jdbc_url, table='products_table', mode=mode, properties=config)"
       ]
@@ -527,7 +527,7 @@
       "source": [
         "# Write vine_table to table in RDS\n",
         "# 11 minutes\n",
-        "vine_df.write.jdbc(url=jdbc_url, table='vine_table', mode=mode, properties=config)"
+        "vine_table.write.jdbc(url=jdbc_url, table='vine_table', mode=mode, properties=config)"
       ]
     },
     {
